# session-nanny

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build
client/: main.vala
daemon/: interfaces.vala  main.vala  net.sardemff7.session-nanny.service.in  session-nanny.service.in
src/: config.vapi
